--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,12 +34,14 @@ jobs:
           wait-on: http://localhost:3000
       - name: Deploy app
         if: ${{ github.event_name == 'push' }}
+        if: ${{ !contains(join(github.event.commits.*.message,','), '#skip') }}
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.55.0
         if: ${{ github.event_name == 'push' }}
+        if: ${{ !contains(join(github.event.commits.*.message,','), '#skip') }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
