--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,7 +23,15 @@ jobs:
       - name: Check style
         run: npm run eslint
       - name: Build
+        id: build
         run: npm run build
+      - name: Build failure
+        uses: rjstone/discord-webhook-notify@v1
+        if: ${{  failure() && steps.build.conclusion == 'failure' }}
+        with:
+          severity: error
+          details: Build failed
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Run tests
         run: npm test
       - name: e2e tests
@@ -35,8 +43,16 @@ jobs:
       - name: Deploy app
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message,','), '#skip') }}
         run: flyctl deploy --remote-only
+        id: deploy
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - name: Deploy success
+        uses: rjstone/discord-webhook-notify@v1
+        if: ${{  success() && steps.deploy.conclusion == 'success' }}
+        with:
+          severity: info
+          details: Deploy succeeded
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.55.0
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message,','), '#skip') }}
