--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           severity: error
           description: Build failed
-          details: commit {{ join(github.event.commits.*.url, ' ') }}
+          details: commit ${{ join(github.event.commits.*.url, ' ') }}
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Run tests
         run: npm test
@@ -53,7 +53,7 @@ jobs:
         with:
           severity: info
           description: Deploy succeeded
-          details: commit {{ join(github.event.commits.*.url, ' ') }}
+          details: commit ${{ join(github.event.commits.*.url, ' ') }}
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.55.0
