--- a/.github/workflows/healthCheck.yml
+++ b/.github/workflows/healthCheck.yml
@@ -9,7 +9,7 @@ on:
     - cron:  '30 17 * * *'
 
 jobs:
-  health check:
+  health-check:
     runs-on: ubuntu-20.04
     steps:
       - name: Check the deployed service URL
